Fix pom file to prepare jar: mvn clean Add docker file